<resources>
    <string name="app_name">PerfectList</string>

    <string name="tv_name">Nom :</string>
    <string name="tv_category">Catégorie :</string>
    <string name="tv_nbPoint">Nombre de point :</string>
    <string name="tv_isNotificationNeeded">Activer les notifications :</string>
    <string name="tv_priority">Priorité :</string>
    <string name="tv_security">Sécurité :</string>
    <string name="tv_period">Récurence :</string>
    <string name="tv_period_link">x par</string>
    <string name="tv_endNotification">Fin des notifications :</string>
    <string name="tv_endNotificationDate">Séléctionner la date</string>

    <string name="et_name">Nom</string>
    <string name="et_nbPoint">0</string>
    <string name="et_nbRepetition">0</string>

    <string name="button_create">Créer</string>

    <string name="yes">OUI</string>
    <string name="no">NON</string>

    <string-array name="category_array">
        <item>Diver</item>
    </string-array>

    <string-array name="period_array">
        <item>Heure</item>
        <item>Jour</item>
        <item>Semaine</item>
        <item>Mois</item>
        <item>An</item>
    </string-array>

    <string-array name="security_array">
        <item>Privé</item>
        <item>Public</item>
    </string-array>

    <string-array name="priority_array">
        <item>Minimal</item>
        <item>Maximal</item>
    </string-array>
</resources>